genericgeometrydir = $(includedir)/dune/grid/genericgeometry
genericgeometry_HEADERS = codimtable.hh \
                          conversion.hh \
			  cornermapping.hh \
			  genericreferenceelement.hh \
			  geometry.hh \
			  hybridmapping.hh \
			  mappings.hh \
			  matrix.hh \
                          misc.hh \
                          referenceelements.hh \
			  submapping.hh \
			  subtopologies.hh \
                          topologytypes.hh

SUBDIRS = test
