genericgeometrydir = $(includedir)/dune/grid/genericgeometry
genericgeometry_HEADERS = cachedmapping.hh              codimtable.hh \
                          conversion.hh                 cornermapping.hh \
			  genericreferenceelement.hh    geometricmapping.hh \
			  geometry.hh                   geometrytraits.hh \
			  hybridmapping.hh              mappingprovider.hh \
			  matrix.hh                     misc.hh \
			  referenceelements.hh          submapping.hh \
			  subtopologies.hh              topologytypes.hh

SUBDIRS = test

include $(top_srcdir)/am/global-rules
