genericgeometrydir = $(includedir)/dune/grid/genericgeometry
genericgeometry_HEADERS = cachedmapping.hh              codimtable.hh \
                          conversion.hh                 cornermapping.hh \
			  genericreferenceelement.hh    geometry.hh \
			  geometrytraits.hh             hybridmapping.hh \
			  mapping.hh                    mappingprovider.hh \
			  matrix.hh                     misc.hh \
			  referencedomain.hh            referenceelements.hh \
			  referencemappings.hh          referencetopologies.hh \
			  subtopologies.hh              topologytypes.hh \
			  traceprovider.hh

SUBDIRS = test

include $(top_srcdir)/am/global-rules
