griddir = $(includedir)/dune/grid/geogrid
grid_HEADERS = cache.hh \
               capabilities.hh \
	       datahandle.hh \
               entity.hh \
               entitypointer.hh \
               grid.hh \
	       identity.hh \
	       indexsets.hh \
	       intersectioniterator.hh \
	       iterator.hh \
	       storage.hh
