griddir = $(includedir)/dune/grid/geogrid
grid_HEADERS = capabilities.hh          cornerstorage.hh         coordfunction.hh \
	       datahandle.hh            entity.hh                entitypointer.hh \
               grid.hh                  identity.hh              indexsets.hh \
	       intersection.hh          intersectioniterator.hh  iterator.hh \
	       storage.hh

include $(top_srcdir)/am/global-rules
